tests/reference/asr-max1-99bbd87.stderr
semantic error: Arguments do not match for any generic procedure, max
 --> tests/max1.f90:3:3
  |
3 | s=max(abs(zero),abs(one),abs(two))
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
